<resources>
    <string name="app_name">NoteApp HelloTask</string>
    <string name="calender">Calender</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="welcome_john_doe">Welcome John Doe!</string>
    <string name="reminders">Reminders</string>
    <string name="schedules">Schedules</string>
    <string name="my_notes">My Notes</string>
    <string name="search">Search</string>
    <string name="add_to_favourites">My Favourite</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="your_note">Your Note</string>
    <string name="search_your_notes">Search Your Notes</string>
    <string name="get_started">Get Started</string>
</resources>