<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorBackground"
    tools:context=".activity.AddEditNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_note"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardElevation="4dp"
            android:background="@drawable/curve_shape"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/title"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:backgroundTint="@android:color/transparent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            app:cardElevation="4dp"
            android:background="@drawable/curve_shape"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="48dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:hint="@string/your_note"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"
                    android:backgroundTint="@android:color/transparent"/>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorWhite"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:fabCradleMargin="0dp"
        app:fabCradleRoundedCornerRadius="0dp"
        app:fabAlignmentMode="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorWhite" />

            <CheckBox
                android:id="@+id/cb_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favourites"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/cb_favourite"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"/>

        </RelativeLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_save"
        app:layout_anchor="@id/bottom_app_bar"
        app:tint="@color/colorWhite"
        app:borderWidth="0dp"
        app:fabSize="normal"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>