<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorBackground"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/welcome_john_doe"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/profile_image"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/john"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/curve_shape"
            app:cardElevation="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp">

                <EditText
                    android:id="@+id/et_search_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/search"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@id/iv_search"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"/>

                <ImageButton
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/colorWhite"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="5"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <RelativeLayout
                android:id="@+id/all_notes_box"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_shape"
                android:backgroundTint="@color/colorAccent"
                android:padding="8dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notes"
                    app:tint="@color/colorWhite"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/tv_total_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notes"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_below="@id/tv_total_notes"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_shape"
                android:backgroundTint="@color/colorReminder"
                android:padding="8dp"
                android:layout_marginStart="8dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_reminder"
                    app:tint="@color/colorWhite"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/tv_total_reminders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reminders"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_below="@id/tv_total_reminders"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_shape"
                android:backgroundTint="@color/colorSchedules"
                android:padding="8dp"
                android:layout_marginStart="8dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/colorWhite"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/tv_total_schedules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/schedules"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_below="@id/tv_total_schedules"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/curve_shape"
            android:elevation="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CalendarView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorWhite"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:fabCradleMargin="0dp"
        app:fabCradleRoundedCornerRadius="0dp">

        <include layout="@layout/bottom_app_bar_layout"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_home"
        app:layout_anchor="@id/bottom_app_bar"
        app:tint="@color/colorWhite"
        app:borderWidth="0dp"
        app:fabSize="normal"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>